@@ -14,7 +14,6 @@ body { font-size: 12pt; }
 a { color: black; text-decoration: underline; font-weight: normal;}
 /*]]>*/
 </style>
-
 </head>
 
 <body>
@@ -205,73 +204,87 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
         <dt><a name="WMWARN35">[WMWARN35]</a></dt>
         <dd><p>"LINK <em>linkname</em> uses a NODE with no POSITION!"</p>
-        <p></p>
+        <p>Some nodes have no position, because they are used purely as a TEMPLATE for other nodes.
+        You have used one of these for a real link, and as a result, Weathermap can't figure out
+        where to draw the link.</p>
         </dd>
 
 
         <dt><a name="WMWARN36">[WMWARN36]</a></dt>
         <dd><p>"Using a non-existent special font (<em>number</em>) - falling back to internal GD fonts"</p>
-        <p></p>
+        <p>You have used a command like COMMENTFONT, TITLEFONT or LABELFONT to change the font
+        to a custom-defined one (number > 5) but there is no FONTDEFINE line for that font number, OR
+        the font could not be loaded. Check back in the logs, for WMWARN30 or WMWARN31.</p>
         </dd>
 
 
         <dt><a name="WMWARN37">[WMWARN37]</a></dt>
-        <dd><p>"Couldn't open PNG ICON: '<em>filename</em>' - is it a PNG, JPEG or GIF?"</p>
-        <p></p>
+        <dd><p>"Couldn't open ICON: '<em>filename</em>' - is it a PNG, JPEG or GIF?"</p>
+        <p>The file you specified to use as an ICON does exist, but couldn't be loaded by the GD image library.
+        Check that the file really is an image file.</p>
         </dd>
 
 
         <dt><a name="WMARN38">[WMARN38]</a></dt>
         <dd><p>"ICON '<em>filename</em>' does not exist, or is not readable. Check path and permissions."</p>
-        <p></p>
+        <p>You specified an ICON, but the file couldn't be opened or couldn't be found at all.</p>
         </dd>
 
 
         <dt><a name="WMWARN39">[WMWARN39]</a></dt>
         <dd><p>"line <em>number</em>: TEMPLATE is not first line of object. Some data may be lost."</p>
-        <p></p>
+        <p>The TEMPLATE command works by copying the settings from another node or link over the top
+        of the existing items. If you use some other configuration commands, then use TEMPLATE, the
+        results of those commands may be overwritten by the equivalent settings in the template item.</p>
         </dd>
 
 
         <dt><a name="WMWARN40">[WMWARN40]</a></dt>
         <dd><p>"line <em>number</em>: <em>NODE or LINK</em> TEMPLATE '<em>name</em>' doesn't exist! (if it does exist, check it's defined first)"</p>
-        <p></p>
+        <p>You specified a TEMPLATE, but the node or link doesn't exist. Also, possibly, that the template node is
+            further down in the config file. Best practice is to keep the templates together near the top of the file, along with DEFAULTs.</p>
         </dd>
 
 
         <dt><a name="WMWARN41">[WMWARN41]</a></dt>
         <dd><p>"OVERLIBGRAPH is used, but HTMLSTYLE is static. This is probably wrong."</p>
-        <p></p>
+        <p>To generate the 'popup' graphs, the Overlib javascript is required. The default
+        HTML output from Weathermap doesn't include this for historical reasons. If you
+        specify OVERLIBGRAPH, you must also add 'HTMLSTYLE overlib' to the top section of
+        the config file.</p>
         </dd>
 
 
         <dt><a name="WMWARN42">[WMWARN42]</a></dt>
         <dd><p>"IN/OUTOVERLIBGRAPH make no sense for a NODE!"</p>
-        <p></p>
+        <p>NODEs don't have a input and output area on the image, so you can't specify separate
+        OVERLIBGRAPHs for each.</p>
         </dd>
 
 
         <dt><a name="WMWARN43">[WMWARN43]</a></dt>
         <dd><p>"FindScaleExtent: non-existent SCALE <em>scalename</em>"</p>
-        <p></p>
+        <p>Somehow, Weathermap is trying to draw a legend for a scale that doesn't exist. This is probably a bug - please report.</p>
         </dd>
 
 
         <dt><a name="WMWARN43">[WMWARN43]</a></dt>
         <dd><p>"You can't make a contrast with 'none'."</p>
-        <p></p>
+        <p>The 'contrast' option picks black or white depending on what colour the background is. When you set a background of 'none',
+        there is no correct answer, so Weathermap complains. Change 'contrast' to '0 0 0' or '255 255 255' as appropriate.</p>
         </dd>
 
 
         <dt><a name="WMWARN44">[WMWARN44]</a></dt>
         <dd><p>"ReadData: <em>NODE/LINK</em> <em>name</em>: You're using asymmetric bandwidth AND half-duplex in the same link. That makes no sense."</p>
-        <p></p>
+        <p>Half-duplex calculates the percentage usage based on (input+output)/max_bandwidth. You have specified different bandwidth in each direction, but also half-duplex.
+        The calculation is not possible.</p>
         </dd>
 
 
         <dt><a name="WMWARN45">[WMWARN45]</a></dt>
         <dd><p>"Zero-length link <em>name</em> skipped."</p>
-        <p></p>
+        <p>You have a link from a node to the same node without any VIAs. It isn't possible to draw.</p>
         </dd>
 
 
@@ -284,7 +297,7 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
       <dt><a name="WMEDIT01">[WMEDIT01]</a></dt>
 	<dd><p>"The map config directory is not writable by the web server user. You will not be able to edit any files until this is corrected."</p>
-	<p></   p>
+	<p></p>
 	</dd>
 
       <dt><a name="WMEDIT02">[WMEDIT02]</a></dt>
@@ -318,46 +331,53 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 	<p></p>
 	</dd>
 
-
-
         <dt><a name="WMPOLL01">[WMPOLL01]</a></dt>
 	<dd><p>"About to write image file. If this is the last message in your log, increase memory_limit in php.ini"</p>
-	<p></p>
+	<p>PHP has a hard memory limit, to stop runaway scripts from killing your server. Depending on the version
+        of PHP, this can be quite low (8M in older versions). Weathermap uses a lot (relatively) of memory to produce
+        the large image files. If it hits the PHP memory limit, then PHP just kills the script with no warning. Because it
+        log that it is dead (because it is dead), it logs just before the 'risk' happens. <em>If this log message is <strong>not</strong> the last
+        message in your log file, then <strong>nothing is wrong</strong>!</em></p>
+            <p>You can disable some messages like this one by changing settings in Cacti. Go to Settings..Misc and set Weathermap Logging to 'Quiet'. If you suddenly
+            get a mystery where Weathermap is only updating some maps, turn it back to 'Chatty' to see what is happening.</p>
 	</dd>
 
         <dt><a name="WMPOLL02">[WMPOLL02]</a></dt>
 	<dd><p>"Failed to overwrite <em>filename</em> - permissions of existing file are wrong? "</p>
-	<p></p>
+	<p>Weathermap couldn't overwrite an output file. Files in the weathermap/output/ directory should be writable by the Cacti poller user.</p>
 	</dd>
 
         <dt><a name="WMPOLL03">[WMPOLL03]</a></dt>
 	<dd><p>"Failed to create <em>filename</em> - permissions of output directory are wrong?"</p>
-	<p></p>
+	<p>The weathermap/output/ directory should be writable by the Cacti poller user.</p>
 	</dd>
 
         <dt><a name="WMPOLL04">[WMPOLL04]</a></dt>
 	<dd><p>"Mapfile <em>filename</em> is not readable or doesn't exist"</p>
-	<p></p>
+	<p>The mapfile could not be opened. That could be because it is not readable by the Cacti poller user, or because the file no longer exists but
+            is still in the database (check the Manage..Weathermaps screen in Cacti).</p>
 	</dd>
 
         <dt><a name="WMPOLL05">[WMPOLL05]</a></dt>
 	<dd><p>"No activated maps found. "</p>
-	<p></p>
+	<p>There are no maps in the database, or no maps that are enabled at the moment. There is also a scheduling
+        facility, so if no maps are due to be updated according to their schedule, you will get this message. The
+        scheduling feature is not yet in use in 0.97.</p>
 	</dd>
 
         <dt><a name="WMPOLL05">[WMPOLL06]</a></dt>
 	<dd><p>"Output directory (<em>directory</em>) isn't writable (tried to create '<em>filename</em>'). No maps created. You probably need to make it writable by the poller process (like you did with the RRA directory)"</p>
-	<p></p>
+	<p>The weathermap/output/ directory should be writable by the Cacti poller user.</p>
 	</dd>
 
         <dt><a name="WMPOLL07">[WMPOLL07]</a></dt>
 	<dd><p>"Output directory (<em>directory</em>) doesn't exist!. No maps created. You probably need to create that directory, and make it writable by the poller process (like you did with the RRA directory)"</p>
-	<p></p>
+	<p>The weathermap/output/ directory doesn't exist. It is part of the standard zip package, so you probably deleted or renamed it.</p>
 	</dd>
 
         <dt><a name="WMPOLL08">[WMPOLL08]</a></dt>
 	<dd><p>"Required modules for PHP Weathermap <em>versionnumber</em> were not present. Not running."</p>
-	<p></p>
+	<p>Run 'php check.php' from the command-line, to find out what modules are missing.</p>
 	</dd>
 
 
@@ -406,19 +426,22 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
         <dt><a name="WMRRD07">[WMRRD07]</a></dt>
         <dd><p>"RRD ReadData: poller_output: <em>dsname</em> is not a valid DS name for <em>rrdfilename</em> - valid names are: <em>dsnames</em>"</p>
-        <p></p>
+        <p>This is explained in <a href="http://www.network-weathermap.com/articles/non-standard-ds-names">this article</a></p>
         </dd>
 
 
         <dt><a name="WMRRD08">[WMRRD08]</a></dt>
         <dd><p>"RRD ReadData: poller_output: <em>filename</em> is not a valid RRD filename within this Cacti install. &lt;path_rra&gt; is <em>pathname</em>"</p>
-        <p></p>
+        <p>The poller_output support works by looking in the Cacti database for a filename that matches your TARGET line. However, Cacti
+        stores the filenames relative to the rra/ directory. Weathermap tries to convert your filename to that format, so it can find
+        it in the database, but it sometimes gets it wrong. The &lt;path_rra&gt; is the path that it is expecting to be on the beginning of absolute paths in your TARGET.</p>
         </dd>
 
 
         <dt><a name="WMRRD09">[WMRRD09]</a></dt>
         <dd><p>"Not enough output from RRDTool."</p>
-        <p></p>
+        <p>Weathermap ran rrdtool to read the rrd file for your TARGET, but only got one line of output, probably an error message.
+        Run with debug logging to see what the output was, which should help figuring out what is wrong.</p>
         </dd>
 
 
@@ -459,25 +482,23 @@ a { color: black; text-decoration: underline; font-weight: normal;}
 
         <dt><a name="WMSNMP01">[WMSNMP01]</a></dt>
         <dd><p>"SNMP for <em>hostname</em> has reached <em>number</em> failures. Skipping."</p>
-        <p></p>
+        <p>The SNMP datasource has a special feature to keep track of how many failures each host has had. This is to avoid the
+        Weathermap process timing out 400 times on a chassis switch that is down. After the first few, it assumes that
+        all requests to that device will fail. See the <a href="targets.html#snmp">SNMP DS documentation</a> for information on how to tune this.</p>
         </dd>
 
 
         <dt><a name="WMTIME01">[WMTIME01]</a></dt>
         <dd><p>"Time DS Plugin recognised a TARGET, but needs PHP5+ to run."</p>
-        <p></p>
+        <p>The Time DS plugin uses a PHP function that was introduced in PHP 5, and
+        can't run on PHP 4.</p>
         </dd>
 
 
         <dt><a name="WMTIME02">[WMTIME02]</a></dt>
         <dd><p>"Time ReadData: Couldn't recognize <em>string</em> as a valid timezone name"</p>
-        <p></p>
+        <p>The timezone string you used was not correct. Probably a typo.</p>
         </dd>
-
-
-
-
-
 
   </div>
 </body>
